# rag-agent

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml  release.yml
config/: __init__.py  default_settings.py
docs/: README.md
examples/: basic_usage.py
src/rag_agent/: __init__.py
src/rag_agent/core/: __init__.py  agent.py  exceptions.py  protocols.py
src/rag_agent/providers/: __init__.py  embeddings.py  llm.py
src/rag_agent/storage/: __init__.py  chroma_store.py
src/rag_agent/utils/: __init__.py  ingestion.py  logging.py  text_processing.py
tests/: __init__.py
tests/integration/: __init__.py  test_full_pipeline.py
tests/unit/: __init__.py  test_agent.py  test_exceptions.py  test_logging.py  test_text_processing.py
